make link open in new tab

--- a/esp8266.md
+++ b/esp8266.md
@@ -2,11 +2,13 @@
 
 ## Requirements
 
-+ Get esptool using `pip install esptool`
++ Get esptool using
+
+  `pip install esptool`
 
 ## Firmware
 
-+ Download the latest firmware from [here](http://micropython.org/download#esp8266)
++ Download the latest firmware from <a href="http://micropython.org/download#esp8266" target="_blank">here</a>.
 
 + Erase the existing firmware using following command:
 
