finish firmware section

--- a/esp8266.md
+++ b/esp8266.md
@@ -10,10 +10,31 @@
 
 + Download the latest firmware from <a href="http://micropython.org/download#esp8266" target="_blank">here</a>.
 
-+ Erase the existing firmware using following command:
++ Erase the existing firmware using following command into a terminal:
 
   `esptool.py --port /dev/ttyUSB0 erase_flash`
 
 + Go to the same directory as .bin file you dowloaded and enter the following command to install the firmware on your esp8266:
 
-  `esptool.py --port /dev/ttyUSB0 --baud 460800 write_flash --flash_size=detect -fm dio 0 esp8266-20170108-v1.8.7.bin`
+  `esptool.py --port /dev/ttyUSB0 --baud 115200 write_flash --flash_size=detect -fm dio 0 [firmware.bin]`
+
++ Test that your firmware installed successfully
+
+  Hard reset the board
+
+  Try to start a REPL over the serial port using the following command:
+
+  `screen /dev/ttyUSB0 115200`
+
+  Then press enter until you see `>>>`. This means that a REPL has been successfully created.
+
+  To check that state of the firmware, enter the following commands into the REPL:
+
+  ```python
+  import esp
+  esp.check_fw()
+  ```
+  
+
+
+
