add webrepl and start network sections

--- a/esp8266.md
+++ b/esp8266.md
@@ -8,7 +8,7 @@
 
 ## Firmware
 
-+ Download the latest firmware from <a href="http://micropython.org/download#esp8266" target="_blank">here</a>.
++ Download the latest firmware from [here]("http://micropython.org/download#esp8266").
 
 + Erase the existing firmware using following command into a terminal:
 
@@ -28,13 +28,46 @@
 
   Then press enter until you see `>>>`. This means that a REPL has been successfully created.
 
-  To check that state of the firmware, enter the following commands into the REPL:
+  To check that state of the firmware, enter the following lines into the REPL:
 
   ```python
   import esp
   esp.check_fw()
   ```
   
+## Enable WebREPL
 
+In order to access a repl over wifi. WebREPL must be setup on the
+esp8266 itself. To do this enter the following command when in the
+the serial repl. Follow the prompts as desired.
 
+```python
+import webrepl_setup
+```
 
+*Note: The password created here is entered once connected to the
+board using the webrepl it is not the password to the board if you choose to set it up as an access point.*
+
+## Network Setup
+
+In order to connect to the esp8266 using a web socket, you will need
+to connect to the device in one of two ways. To start make sure that
+you have a repl open via serial.
+
+`screen /dev/ttyUSB0 115200`
+
+Next import the network module:
+
+```python
+import network
+```
+
+### Station Interface
+
+The station interface allows users to connect to the esp8266 as if it were another
+device on the network.
+
+### Access Point Interface
+
+The access point interface allows users to connect to the esp8266 as if it is an access point.
+  
