updated md to add ampy

--- a/esp8266.md
+++ b/esp8266.md
@@ -2,23 +2,23 @@
 
 ## Requirements
 
-+ Get esptool using
+* Get esptool using (using python3)
 
-  `pip install esptool`
+  `pip install esptool adafruit-ampy`
 
 ## Firmware
 
-+ Download the latest firmware from [here]("http://micropython.org/download#esp8266").
+* Download the latest firmware from [here]("http://micropython.org/download#esp8266").
 
-+ Erase the existing firmware using following command into a terminal:
+* Erase the existing firmware using following command into a terminal:
 
   `esptool.py --port /dev/ttyUSB0 erase_flash`
 
-+ Go to the same directory as .bin file you dowloaded and enter the following command to install the firmware on your esp8266:
+* Go to the same directory as .bin file you dowloaded and enter the following command to install the firmware on your esp8266:
 
   `esptool.py --port /dev/ttyUSB0 --baud 115200 write_flash --flash_size=detect -fm dio 0 [firmware.bin]`
 
-+ Test that your firmware installed successfully
+* Test that your firmware installed successfully
 
   Hard reset the board
 
@@ -34,9 +34,30 @@
   import esp
   esp.check_fw()
   ```
-  
-## Enable WebREPL
 
+* Setup up `boot.py` to run code on boot (setup as station)
+  
+  ```python
+  # boot.py
+  import gc
+  import network
+  sta_if = network.WLAN(network.STA_IF) # initialize stationary mode
+  if not sta_if.isconnected():
+    sta_if.active(True) # activate sta mode
+    sta_if.connect('<ssid>', '<password>') # connect to wifi
+    while not sta_if.isconnected():
+      pass
+  print(sta_if.ifconfig())
+  gc.collect()
+  ```
+ 
+  Upload the `boot.py` file using ampy:
+
+  `ampy -p /dev/ttyUSB0 -b 115200 put /path/to/boot.py`
+
+<!---
+## Enable WebREPL
+  
 In order to access a repl over wifi. WebREPL must be setup on the
 esp8266 itself. To do this enter the following command when in the
 the serial repl. Follow the prompts as desired.
@@ -61,6 +82,7 @@ Next import the network module:
 ```python
 import network
 ```
+--->
 
 ### Station Interface
 
