add sudo screen to command

--- a/esp8266.md
+++ b/esp8266.md
@@ -24,7 +24,7 @@
 
   Try to start a REPL over the serial port using the following command:
 
-  `screen /dev/ttyUSB0 115200`
+  `sudo screen /dev/ttyUSB0 115200`
 
   Then press enter until you see `>>>`. This means that a REPL has been successfully created.
 
