--- a/esp8266.md
+++ b/esp8266.md
@@ -10,13 +10,14 @@
 
 * Download the latest firmware from [here]("http://micropython.org/download#esp8266").
 
-* Erase the existing firmware using following command into a terminal:
+* Erase the existing firmware using following command into a terminal replacing PORT_OF_ESP8266 with your port
+  (on Windows this will be something like "COM1" and on OSX and Linux it will start with "/dev/tty"):
 
-  `esptool.py --port /dev/ttyUSB0 erase_flash`
+  `esptool.py --port PORT_OF_ESP8266 erase_flash`
 
 * Go to the same directory as .bin file you dowloaded and enter the following command to install the firmware on your esp8266:
 
-  `esptool.py --port /dev/ttyUSB0 --baud 115200 write_flash --flash_size=detect -fm dio 0 [firmware.bin]`
+  `esptool.py --port PORT_OF_ESP8266 --baud 115200 write_flash --flash_size=detect -fm dio 0 FIRMWARE_FILE.bin`
 
 * Test that your firmware installed successfully
 
@@ -24,7 +25,7 @@
 
   Try to start a REPL over the serial port using the following command:
 
-  `sudo screen /dev/ttyUSB0 115200`
+  `sudo screen PORT_OF_ESP8266 115200`
 
   Then press enter until you see `>>>`. This means that a REPL has been successfully created.
 
