--- a/esp8266.md
+++ b/esp8266.md
@@ -2,18 +2,18 @@
 
 ## Requirements
 
-* Get esptool using (using python3)
+* Get esptool and ampy using (using python3)
 
   `pip install esptool adafruit-ampy`
 
 ## Firmware
 
-* Download the latest firmware from [here]("http://micropython.org/download#esp8266").
+* Download the latest firmware from [here](http://micropython.org/download#esp8266).
 
 * Erase the existing firmware using following command into a terminal replacing PORT_OF_ESP8266 with your port
-  (on Windows this will be something like "COM1" and on OSX and Linux it will start with "/dev/tty"):
+  (on Windows this will start with "COM" and on OSX and Linux it will start with "/dev/tty"):
 
-  `esptool.py --port PORT_OF_ESP8266 erase_flash`
+  `esptool.py --port PORT_OF_ESP8266 --baud 115200 erase_flash`
 
 * Go to the same directory as .bin file you dowloaded and enter the following command to install the firmware on your esp8266:
 
